--- a/easy_dev.ipynb
+++ b/easy_dev.ipynb
@@ -33,10 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f155277c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lorenzp/.conda/envs/def2/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from openood.utils import config\n",
     "from openood.datasets import get_dataloader, get_ood_dataloader\n",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "48968bc2",
    "metadata": {},
    "outputs": [],
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "a99ab6de",
    "metadata": {},
    "outputs": [
@@ -80,7 +89,9 @@
       "text/plain": [
        "dataset:\n",
        "    image_size: 32\n",
+       "    interpolation: bilinear\n",
        "    name: cifar10\n",
+       "    normalization_type: cifar10\n",
        "    num_classes: 10\n",
        "    num_gpus: 1\n",
        "    num_machines: 1\n",
@@ -92,28 +103,26 @@
        "        data_dir: ./data/images_classic/\n",
        "        dataset_class: ImglistDataset\n",
        "        imglist_pth: ./data/benchmark_imglist/cifar10/test_cifar10.txt\n",
-       "        interpolation: bilinear\n",
        "        shuffle: False\n",
        "    train:\n",
        "        batch_size: 128\n",
        "        data_dir: ./data/images_classic/\n",
        "        dataset_class: ImglistDataset\n",
        "        imglist_pth: ./data/benchmark_imglist/cifar10/train_cifar10.txt\n",
-       "        interpolation: bilinear\n",
        "        shuffle: True\n",
        "    val:\n",
        "        batch_size: 200\n",
        "        data_dir: ./data/images_classic/\n",
        "        dataset_class: ImglistDataset\n",
        "        imglist_pth: ./data/benchmark_imglist/cifar10/val_cifar10.txt\n",
-       "        interpolation: bilinear\n",
        "        shuffle: False\n",
        "evaluator:\n",
        "    name: ood\n",
-       "exp_name: cifar10_resnet18_32x32_test_ood_ood_msp_default\n",
-       "merge_option: default\n",
+       "    ood_scheme: ood\n",
+       "exp_name: cifar10_resnet18_32x32_test_ood_ood_msp_default/s0/ood\n",
        "machine_rank: 0\n",
        "mark: default\n",
+       "merge_option: default\n",
        "network:\n",
        "    checkpoint: ./results/cifar10_resnet18_32x32_base_e100_lr0.1/best.ckpt\n",
        "    name: resnet18_32x32\n",
@@ -140,8 +149,6 @@
        "        texture:\n",
        "            data_dir: ./data/images_classic/\n",
        "            imglist_pth: ./data/benchmark_imglist/cifar10/test_texture.txt\n",
-       "    image_size: 32\n",
-       "    interpolation: bilinear\n",
        "    name: cifar10_ood\n",
        "    nearood:\n",
        "        cifar100:\n",
@@ -150,7 +157,7 @@
        "        datasets: ['cifar100', 'tin']\n",
        "        tin:\n",
        "            data_dir: ./data/images_classic/\n",
-       "            imglist_pth: ./data/benchmark_imglist/osr_tin20/test_tin.txt\n",
+       "            imglist_pth: ./data/benchmark_imglist/cifar10/test_tin.txt\n",
        "    num_classes: 10\n",
        "    num_gpus: 1\n",
        "    num_machines: 1\n",
@@ -159,21 +166,23 @@
        "    split_names: ['val', 'nearood', 'farood']\n",
        "    val:\n",
        "        data_dir: ./data/images_classic/\n",
-       "        imglist_pth: ./data/benchmark_imglist/cifar10/val_cifar100.txt\n",
+       "        imglist_pth: ./data/benchmark_imglist/cifar10/val_tin.txt\n",
        "output_dir: ./results/\n",
        "pipeline:\n",
        "    name: test_ood\n",
        "postprocessor:\n",
+       "    APS_mode: False\n",
        "    name: msp\n",
        "preprocessor:\n",
        "    name: base\n",
        "recorder:\n",
        "    save_csv: True\n",
        "    save_scores: True\n",
-       "save_output: False"
+       "save_output: False\n",
+       "seed: 0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,15 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "35d30b38",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Loading resnet18_32x32 Completed!\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './results/cifar10_resnet18_32x32_base_e100_lr0.1/best.ckpt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m ood_loader_dict \u001b[39m=\u001b[39m get_ood_dataloader(config)\n\u001b[1;32m      4\u001b[0m \u001b[39m# init network\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m net \u001b[39m=\u001b[39m get_network(config\u001b[39m.\u001b[39;49mnetwork)\u001b[39m.\u001b[39mcuda()\n\u001b[1;32m      6\u001b[0m \u001b[39m# init ood evaluator\u001b[39;00m\n\u001b[1;32m      7\u001b[0m evaluator \u001b[39m=\u001b[39m get_evaluator(config)\n",
+      "File \u001b[0;32m~/IWR/OpenOOD/openood/networks/utils.py:381\u001b[0m, in \u001b[0;36mget_network\u001b[0;34m(network_config)\u001b[0m\n\u001b[1;32m    379\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    380\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 381\u001b[0m         net\u001b[39m.\u001b[39mload_state_dict(torch\u001b[39m.\u001b[39;49mload(network_config\u001b[39m.\u001b[39;49mcheckpoint),\n\u001b[1;32m    382\u001b[0m                             strict\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m    383\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m:\n\u001b[1;32m    384\u001b[0m         \u001b[39m# sometimes fc should not be loaded\u001b[39;00m\n\u001b[1;32m    385\u001b[0m         loaded_pth \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mload(network_config\u001b[39m.\u001b[39mcheckpoint)\n",
+      "File \u001b[0;32m~/.conda/envs/def2/lib/python3.8/site-packages/torch/serialization.py:986\u001b[0m, in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, weights_only, mmap, **pickle_load_args)\u001b[0m\n\u001b[1;32m    983\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m pickle_load_args\u001b[39m.\u001b[39mkeys():\n\u001b[1;32m    984\u001b[0m     pickle_load_args[\u001b[39m'\u001b[39m\u001b[39mencoding\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m--> 986\u001b[0m \u001b[39mwith\u001b[39;00m _open_file_like(f, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m opened_file:\n\u001b[1;32m    987\u001b[0m     \u001b[39mif\u001b[39;00m _is_zipfile(opened_file):\n\u001b[1;32m    988\u001b[0m         \u001b[39m# The zipfile reader is going to advance the current file position.\u001b[39;00m\n\u001b[1;32m    989\u001b[0m         \u001b[39m# If we want to actually tail call to torch.jit.load, we need to\u001b[39;00m\n\u001b[1;32m    990\u001b[0m         \u001b[39m# reset back to the original position.\u001b[39;00m\n\u001b[1;32m    991\u001b[0m         orig_position \u001b[39m=\u001b[39m opened_file\u001b[39m.\u001b[39mtell()\n",
+      "File \u001b[0;32m~/.conda/envs/def2/lib/python3.8/site-packages/torch/serialization.py:435\u001b[0m, in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    433\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_open_file_like\u001b[39m(name_or_buffer, mode):\n\u001b[1;32m    434\u001b[0m     \u001b[39mif\u001b[39;00m _is_path(name_or_buffer):\n\u001b[0;32m--> 435\u001b[0m         \u001b[39mreturn\u001b[39;00m _open_file(name_or_buffer, mode)\n\u001b[1;32m    436\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    437\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m mode:\n",
+      "File \u001b[0;32m~/.conda/envs/def2/lib/python3.8/site-packages/torch/serialization.py:416\u001b[0m, in \u001b[0;36m_open_file.__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    415\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, name, mode):\n\u001b[0;32m--> 416\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\u001b[39mopen\u001b[39;49m(name, mode))\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './results/cifar10_resnet18_32x32_base_e100_lr0.1/best.ckpt'"
      ]
     }
    ],
@@ -216,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f430f169",
    "metadata": {},
    "outputs": [],
@@ -229,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "512fe29c",
    "metadata": {},
    "outputs": [],
@@ -241,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "418778f7",
    "metadata": {},
    "outputs": [],
@@ -643,11 +660,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "9bfdd80c4cd5b3ca30f79c8858286326028dc154b9efddfc3ea147df9fc4c063"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('ood': conda)",
+   "display_name": "def2",
    "language": "python",
    "name": "python3"
   },
@@ -661,7 +675,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.18"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8af1a37ec1657ddbdbeb9bdd66165b33748c3e1917587336a018d29b66b55770"
+   }
   }
  },
  "nbformat": 4,
