--- a/easy_dev.ipynb
+++ b/easy_dev.ipynb
@@ -661,7 +661,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "def2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -675,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
